# legend-qa-extractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUICK_START.md  README.md  README_CN.md  README_EN.md  demo_upgrade.py  evaluation.py  extract-qa.py  extract_qa.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
docs/: PROMPT_SELECTION_GUIDE.md  TOKEN_OPTIMIZATION_GUIDE.md
examples/: run_example.py  sample_config.yaml
scripts/: monitor_token_usage.py
src/: __init__.py  processor.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  llm_client.py  pdf_processor.py  qa_extractor.py  smart_block_processor.py  text_processor.py
src/utils/: __init__.py  file_utils.py  logger.py
tests/: __init__.py  test_config.py  test_text_processor.py
